tests/transpiler/x/zig/fun_call.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/fun_call.zig:9:5: error: expected type 'void', found 'error{AccessDenied,Unexpected,DiskQuota,FileTooBig,InputOutput,NoSpaceLeft,DeviceBusy,InvalidArgument,BrokenPipe,SystemResources,OperationAborted,NotOpenForWriting,LockViolation,WouldBlock,ConnectionResetByPeer}'
/workspace/mochi/tests/transpiler/x/zig/fun_call.zig:8:15: note: function cannot return an error
