tests/transpiler/x/zig/fun_call.zig
// Generated by Mochi Zig transpiler on 2025-07-20 08:13 +0000
const std = @import("std");

fn add(a: i64, b: i64) i64 {
    return a + b;
}

pub fn main() void {
    std.debug.print("{any}\n", .{add(2, 3)});
}
